landing_page.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: sans-serif;
}

.container {
    display: flex;
    flex-direction: column;
}

.navbar {
    background-color: #1F2937;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.navbar-left {
    display: flex;
    align-items: center;
}

.navbar-right {
    display: flex;
    align-items: center;
    gap: 10px;
}

.navbar-logo {
    color: #F9FAF8;
    font-size: 24px;
    margin-right: auto;
}

.navbar-link {
    color: #E5E7EB;
    font-size: 18px;
    margin: 10px;
}

.hero {
    background-color: #1F2937;
    color: #F9FAF8;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 50px;
}

.hero-left {
    flex-basis: 300px;
    display: flex;
    flex-direction: column;
    text-align: left;
    margin-right: 200px;
    font-size: 25px;
    gap: 10px;
}

.hero-left p {
    color:#E5E7EB;
    font-size: 18px;
    opacity: .7;
}

.hero-left button {
    text-align: center;
    width: 100px;
    border: none;
    background-color: #3772F6;
    color:#E5E7EB;
    padding: 10px;
}

.hero-right {
    background-color: black;
    width: 500px;
    height: 300px;
}

.information {
    background-color: #ffffff;
    color: #000000;
    display: flex;
    flex-direction: column;
}

.information-header {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 50px;
}

.information-header h1 {
    font-size: 36px #1F2937;
}

.information-body {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    gap: 50px;
    margin-bottom: 200px;
}

.information-body-block {
    display: flex;
    flex-basis: 200px;
    flex-direction: column;
    gap: 10px;
}

.information-body-block-image {
    border: 4px solid #3882F6;
    object-fit: cover;
    border-radius: 15px;
    width: 200px;
    height: 200px;
}

.information-body-block-text {
    opacity: .7;
    font-size: 18px;
    justify-content: center;
    align-items: center;
}

.quote-body {
    display: flex;
    flex-direction: column;
    background-color: #E5E7EB;
    padding: 0 200px;
}

.quote-body h1 {
    color:#1F2937;
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    padding: 50px;
}

.quote-body p {
    padding-bottom: 20px;
    padding-right: 10px;
    font-family: arial;
    font-weight: bold;
    text-align: right;
}

.call-to-action {
    background-color: #3882F6;
    display: flex;
    align-items: center;
    border-radius: 5px;
    border-color: none;
    margin: 50px 200px;
    color:#F9FAF8;
}

.call-to-action-item {
    display: flex;
    padding: 50px;
    gap: 250px;
}

.call-to-action-item p {
    opacity: .7;
}

.call-to-action-button {
    text-align: center;
    width: 100px;
    border: 2px solid #F9FAF8;
    background-color: #3882F6;
    border-radius: 5px;
    color:#F9FAF8;
    padding: 10px;
}

.footer {
    display: flex;
    justify-content: center;
    background-color: #1F2937;
    color: #ffffff; 
    padding: 40px;
}

